# curriculum

./: .gitignore  README.md  math_curriculum.py  pyproject.toml
.github/workflows/: tests.yml
curriculum/: math_curriculum.py
tests/: test_math_curriculum.py  test_math_curriculum_division.py  utils.py
